:sparkles: Use Event partition instead of hash

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "[elixir]": {
         "editor.insertSpaces": true,
         "editor.tabSize": 2,
-        "editor.wordBasedSuggestions": false,
+        "editor.wordBasedSuggestions": "off",
         "editor.formatOnType": true,
         "editor.formatOnPaste": true,
         "editor.formatOnSave": true
